HTMLGallery : New "BlueCurved" theme with a blue rubbon on the left and an area for navigation arrows.
HTMLGallery : Add option to generate a Gallery from a selection of images instead an album list.
ImageEditor : Add HTMLGallery, Calendar, ExpoBlending, and Panorama tools support.
Showfoto    : Add HTMLGallery, Calendar, ExpoBlending, and Panorama tools support.

BUGFIXES FROM BUGZILLA:

001 ==> 377432 : Crash on browsing images.
002 ==> 377565 - Problem importing Person tags which are also "normal" tags.
003 ==> 218297 - SETUP : Database location under control panel doesn't match when using database-directory command line option.
004 ==> 377638 - Database directory ignoring hidden and unnecessarily in migration-dialogue.
005 ==> 378098 - Update meta data from selected images (generated outside digikam) does not work anymore.
006 ==> 378219 - Optimize includes and polish.
007 ==> 372972 - Find duplicates "search in drop down" only shows 1 item.
008 ==> 378360 - digiKam 5.5 crashes on startup after update.
009 ==> 378626 - Export menu empty.
010 ==> 353331 - can’t limit fuzzy-search to albums [patch].
011 ==> 300565 - When selecting folders, subfolders are not selected.
012 ==> 183425 - Advanced search by tags : "any tags" option does not work.
013 ==> 376621 - Cannot Enter Data In Geolocation Editor Details Tab.
014 ==> 376049 - Any album appears empty on startup until I select another album to view.
015 ==> 378836 - digiKam Crash when start searching for persons.
016 ==> 378804 - lensfun uses only one core, pls. parallize [patch].
017 ==> 378703 - Download page : add link to pre-version bundle repository from GDrive.
018 ==> 379038 - Camera date Tool-Tip Option Appears Ineffective.
019 ==> 378625 - Very slow start.
020 ==> 379152 - Presentation mode cannot be exited/quitted.
021 ==> 374838 - Advanced Search not finding "Not Tagged" images.
022 ==> 379326 - Import-Tool doesn't rename properly.