@@ -13,11 +13,8 @@
         <Action name="lighttable_setitemleft" />
         <Action name="lighttable_setitemright" />
         <Action name="lighttable_edititem" />
-        <Action name="open_with_default_application" />
         <Separator/>
-        <Action name="import_scan" />
-        <Action name="metadata_edit" />
-        <Action name="geolocation_edit" />
+        <Action name="open_with_default_application" />
         <Separator/>
         <Action name="lighttable_removeitem" />
         <Action name="lighttable_clearlist" />
@@ -49,6 +46,17 @@
         </Menu>
         <Separator />
         <Action name="color_managed_view" />
+    </Menu>
+
+    <Menu name="Tools"><text>&amp;Tools</text>
+        <Action name="import_scan" />
+        <Action name="metadata_edit"/>
+        <Action name="geolocation_edit"/>
+        <Separator/>
+        <Action name="expoblending" />
+        <Action name="panorama" />
+        <Action name="htmlgallery" />
+        <Action name="calendar" />
     </Menu>
 
     <Menu name="settings" noMerge="1"><Text>&amp;Settings</Text>
